--- a/mydjangoproy/templates/about.html
+++ b/mydjangoproy/templates/about.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
+
+{% load static %} #Necesario para linkar la stylesheet
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
+
+#linkamos la stylesheet
+    <link rel="stylesheet" href="{% static 'css/style.css' %}"> 
 </head>
 <body>
     <h1>About</h1>
