--- a/mydjangoproy/templates/about.html
+++ b/mydjangoproy/templates/about.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-
-{% load static %} #Necesario para linkar la stylesheet
+<!--#linkamos la stylesheet-->
+{% load static %} 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
 
-#linkamos la stylesheet
+<!--#linkamos la stylesheet-->
     <link rel="stylesheet" href="{% static 'css/style.css' %}"> 
 </head>
 <body>
