--- a/mydjangoproy/templates/about.html
+++ b/mydjangoproy/templates/about.html
@@ -9,6 +9,7 @@
 
 <!--#linkamos la stylesheet-->
     <link rel="stylesheet" href="{% static 'css/style.css' %}"> 
+    <script src="{% static 'js/main.js' %}" defer></script>
 </head>
 <body>
     <h1>About</h1>
