--- a/mydjangoproy/templates/home.html
+++ b/mydjangoproy/templates/home.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
+<!--Linkamos la stylesheet creada  -->
+
+{% load static %}
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <!--Linkamos la stylesheet creada  -->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <h1>Home</h1>
