--- a/mydjangoproy/templates/about.html
+++ b/mydjangoproy/templates/about.html
@@ -1,18 +1,13 @@
-<!DOCTYPE html>
-<!--#linkamos la stylesheet-->
-{% load static %} 
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
-    
-<!--#linkamos la stylesheet-->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}"> 
-    <script src="{% static 'js/main.js' %}" defer></script>
-</head>
-<body>
-    <h1>About</h1>
-    <P>Check out my <a href="/">Home</a> page.</P>
-</body>
-</html>
+
+{% extends 'layout.html' %}
+
+{% block title %}
+ABOUT
+{% endblock title %}
+
+
+{% block content %}
+<h1>About</h1>
+<P>Check out my <a href="/">Home</a> page.</P>
+
+{% endblock content %}
