--- a/mydjangoproy/templates/layout.html
+++ b/mydjangoproy/templates/layout.html
@@ -16,9 +16,9 @@
 </head>
 <body>
     <nav>
-        <a href="/">HOME</a> |
-        <a href="/about">HAPPY</a> |
-        <a href="/posts">NEWS</a>   
+        <a href="/">🏠</a> |
+        <a href="/about">👌</a> |
+        <a href="/posts">🖼️</a>   
             
     </nav>
     <main>
