--- a/mydjangoproy/posts/templates/posts/posts_list.html
+++ b/mydjangoproy/posts/templates/posts/posts_list.html
@@ -12,7 +12,10 @@
 
 {% for post in posts %}
     <article class="post">
-        <h2>{{ post.title }}</h2>
+        <h2>
+           <a href="{% url 'posts:page' slug=post.slug %}" 
+            {{ post.title }}
+    </h2>
         <p>{{ post.body }}</p>
         <p>{{ post.date }}</p>
         
