--- a/mydjangoproy/templates/layout.html
+++ b/mydjangoproy/templates/layout.html
@@ -18,7 +18,7 @@
     <nav>
         <a href="/">🏠</a> |
         <a href="/about">👌</a> |
-        <a href="/posts">🖼️</a>   
+        <a href="{% url 'posts:list' %}">🖼️</a>   
             
     </nav>
     <main>
