--- a/mydjangoproy/templates/layout.html
+++ b/mydjangoproy/templates/layout.html
@@ -16,9 +16,13 @@
 </head>
 <body>
     <nav>
-        <a href="/">🏠</a> |
-        <a href="/about">👌</a> |
-        <a href="{% url 'posts:list' %}">🖼️</a>   
+        <a href="/">
+            <span role="img" aria-label="Home">🏠</span>
+        </a> |
+        <a href="/about">
+            <span role="img" aria-label="About">👌</span></a> |
+        <a href="{% url 'posts:list' %}">
+            <span role="img" aria-label="Posts">🖼️</span></a>   
             
     </nav>
     <main>
