--- a/mydjangoproy/posts/templates/posts/post_page.html
+++ b/mydjangoproy/posts/templates/posts/post_page.html
@@ -8,6 +8,11 @@
 
 {% block content %}
     <section>
+        <img 
+            class = "banner"
+            src="{{post.banner.url}}"
+            alt = "{{post.title}}"
+        />
         <h1>{{ post.title }} </h1>
         <p>{{ post.body }}</p>
         <p>{{ post.date }}</p>
