--- a/mydjangoproy/users/templates/users/register.html
+++ b/mydjangoproy/users/templates/users/register.html
@@ -9,5 +9,10 @@
 {% block content %}
     
         <h1> Register a New User </h1>
+        <form class = "form-with-validation" action="/users/register/" method = "post">
+            {% csrf_token %}
+            {{ form }}
+            <button>Submit</button>
+        </form>
         
 {% endblock %}
